# assesment-two

./: README.md  package-lock.json  package.json  pyproject.toml
wb/: cntxtmngr.py  decorators.py  generators.py  inheratince.py  iterators.py  singleton.py  webserver.py
wb/tests/: test_cntxtmngr.py  test_decorators.py  test_generators.py  test_inheratince.py  test_inheritance.py  test_iterator.py  test_iterators.py  test_singleton.py  test_webserver.py
