[tool.poetry]
name = "assesment 2 "
version = "0.1.0"
description = ""
authors = ["Farah <farahzalsafwan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jwt = "^1.3.1"
http-client = "^0.1.22"
httpserver = "^1.1.0"
asyncio = "^3.4.3"
wraps = "^0.13.0"
requests = "^2.32.3"
aiohttp = "^3.9.5"
aiohttp-test-utils = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
